force-app/main/default/objects/Position__c/fields/Date_Open__c.field-meta.xml
<CustomField>
    <fullName>Date_Open__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Open</label>
    <type>Date</type>
</CustomField>