force-app/main/default/objects/Position__c/fields/Pay_Grade__c.field-meta.xml
<CustomField>
    <fullName>Pay_Grade__c</fullName>
    <label>Pay Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>