force-app/main/default/objects/Position__c/fields/Primary_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Number</label>
    <type>Phone</type>
</CustomField>